started building settings page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Latest compiled and minified CSS -->
 
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" media="all" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" media="all" crossorigin="anonymous">
 
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" media="all" crossorigin="anonymous">
@@ -15,6 +15,11 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" media="all" crossorigin="anonymous"></script>
 
+
+  <!-- General and constants file -->
+  <script type="text/javascript" src="general.js"></script>
+
+  <!-- Javascript file for index -->
   <script type="text/javascript" src="index.js"></script>
 </head>
 
@@ -23,6 +28,7 @@
   <header>
     <div class="container">
       <h1>Task planner </h1>
+      <!-- <a href="settings.html" class="btn btn-primary">Setari...</a> -->
     </div>
   </header>
 
@@ -42,8 +48,8 @@
 
     <div class="row">
       <div class="list-group container col-md-4" id="task_list">
-      <!--Aici vor aparea taskurile -->
-       </div>
+        <!--Aici vor aparea taskurile -->
+      </div>
     </div>  
 
 
@@ -57,7 +63,10 @@
   </div>
 </section>
 
-<footer></footer>
+<footer>
+  <!-- <a href="//pdfcrowd.com/url_to_pdf/">Save to PDF</a> -->
+
+</footer>
 
 </body>
 </html>
