--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <link rel="stylesheet" type="text/css"  media="all" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
+  <!-- JQuery -->
+  <script src="dependencies/js/jquery-3.3.1.min.js"></script>
+
   <!-- Latest compiled and minified CSS -->
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" media="all" crossorigin="anonymous">
